--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.14.0",
     "bootstrap": "^3.3.7",
     "html-loader": "^0.4.3",
+    "jquery": "^3.1.0",
     "path": "^0.12.7",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
