--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "project",
   "version": "1.0.0",
-  "description": "",
-  "main": "",
+  "description": "DATA Governance Platform",
+  "main": "index",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --content-base ./dist --hot"
